--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <style>
     @media screen and (max-width: 768px) {
+        body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            width: 100%;
+        }
+
         .navbar {
-            padding: 15px;
+            padding: 10px;
+            width: 100vw;
+            position: fixed;
+            top: 0;
+            left: 0;
         }
 
         .nav-links {
             flex-direction: column;
-            gap: 20px;
+            gap: 15px;
             align-items: center;
             display: none;
-            position: absolute;
-            top: 70px;
+            position: fixed;
+            top: 60px;
             left: 0;
-            width: 100%;
-            background: rgba(0,0,0,0.9);
-            padding: 20px 0;
+            right: 0;
+            width: 100vw;
+            background: rgba(0,0,0,0.95);
+            padding: 15px 0;
+            margin: 0;
         }
 
         .nav-links.active {
@@ -26,22 +39,27 @@
         .menu-toggle {
             display: block;
             position: absolute;
-            right: 20px;
-            top: 20px;
+            right: 15px;
+            top: 15px;
             cursor: pointer;
+            z-index: 1001;
         }
 
         .menu-toggle span {
             display: block;
             width: 25px;
-            height: 3px;
+            height: 2px;
             background: #fff;
-            margin: 5px 0;
+            margin: 4px 0;
             transition: 0.3s;
         }
 
         .hero {
-            padding: 0 20px;
+            padding: 0;
+            margin: 0;
+            width: 100vw;
+            min-height: 100vh;
+            overflow: hidden;
         }
     }
 </style>
@@ -53,8 +71,16 @@
         menuToggle.addEventListener('click', function() {
             navLinks.classList.toggle('active');
         });
+
+        // Menutup menu saat link diklik
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('active');
+            });
+        });
     });
 </script>
+
 
 <html lang="id">
 <head>
